--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,6 @@ jobs:
       shell: 'script -q -e -c "bash {0}"'
       run: make lint
 
-    - name: Build krakend executable
+    - name: Run tests
       shell: 'script -q -e -c "bash {0}"'
       run: make test
